// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Card renders correctly 1`] = `
<div>
  <div
    class="sc-AxjAm jmiPwr"
  >
    <h4
      class="sc-AxirZ jfgKYb"
    >
      Card title
    </h4>
    <p
      class="sc-AxiKw jIhbQX"
    >
      20
    </p>
    <span
      class="sc-AxhCb gbPKbT"
    >
      30 Last period
    </span>
  </div>
</div>
`;

exports[`Card renders correctly with default values 1`] = `
<div>
  <div
    class="sc-AxjAm jmiPwr"
  >
    <h4
      class="sc-AxirZ jfgKYb"
    >
      Card title
    </h4>
    <p
      class="sc-AxiKw jIhbQX"
    >
      20
    </p>
    <span
      class="sc-AxhCb gbPKbT"
    >
      30 Last period
    </span>
  </div>
</div>
`;

exports[`Card renders correctly with given props 1`] = `
<div>
  <div
    class="sc-AxjAm beGnMB"
  >
    <h4
      class="sc-AxirZ jfgKYb"
    >
      Active sourcing
    </h4>
    <p
      class="sc-AxiKw jIhbQX"
    >
      10
    </p>
    <span
      class="sc-AxhCb gbPKbT"
    >
      15 Last period
    </span>
  </div>
</div>
`;
